@@ -18,6 +18,11 @@
     %small Select or Create Account (not implemented yet).
 
 %br
-.subtitle#opportunity Opportunities
+- @context = "create_opportunity_contacts_#{@contact.id}" # NOTE: pluralized contacts
+- session[@context] = nil
+= inline @context, new_opportunity_path, "Create Opportunity", { :class => "subtitle_tools" }
+.subtitle{ :id => "#{@context}_title"} Opportunities
+
+.remote{ hidden, :id => @context }
 .list#opportunities
   = render :partial => "opportunities/opportunity", :collection => @contact.opportunities
