@@ -1,5 +1,6 @@
 - remote_form_for(@opportunity) do |f|
   = hidden_field_tag "context", "#{@context}"
+  = hidden_field_tag "contact", "#{@contact.id if @contact}"
   = f.hidden_field :user_id
   = f.hidden_field :assigned_to
   = f.hidden_field :campaign_id
