@@ -18,18 +18,18 @@
     %small Select or Create Account (not implemented yet).
 
 %br
-
-- @context = :create_opportunity_campaign
-= inline @context, new_campaign_path, "Create Campaign", { :class => "subtitle_tools" }
-.subtitle{ :id => "#{@context}_title"} Campaigns
-
-- unless @campaign
-  .remote{ hidden, :id => @context }
-- else
-  .remote{:id => @context }= render :partial => "campaigns/create"
-
+.subtitle Campaign
 .list#campaigns
   - if @opportunity.campaign
-    = render :partial => "campaigns/campaign", :collection => [ @opportunity.campaign ]
+    = render :partial => "campaign/campaign", :collection => [ @opportunity.campaign ]
   - else
-    %small Select or Create Opportunity (not implemented yet).
+    %small Select or Create Campaign (not implemented yet).
+
+%br
+- @context = "create_contact_opportunities_#{@opportunity.id}" # NOTE: pluralized opportunities
+= inline @context, new_contact_path, "Create Contact", { :class => "subtitle_tools" }
+.subtitle{ :id => "#{@context}_title"} Contacts
+
+.remote{ hidden, :id => @context }
+.list#contacts
+  = render :partial => "contacts/contact", :collection => @opportunity.contacts
