@@ -7,6 +7,8 @@ then you win. –- Mahatma Gandhi
 Tue, Feb 23, 2008
 ---------------------------------------------------------------------
 - Implemented adding opportunities from the [Campaign] landing page.
+- Implemented adding opportunities from [Contact] landing page.
+- Implemented adding contacts from [Opportunity] landing page.
 
 Mon, Feb 23, 2008
 ---------------------------------------------------------------------
